--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 cssselect==1.1.0
+cycler==0.10.0
 feedfinder2==0.0.4
 feedparser==6.0.2
 filelock==3.0.12
@@ -13,16 +14,20 @@ isort==5.7.0
 jieba3k==0.35.1
 joblib==1.0.1
 JPype1==1.2.1
+kiwisolver==1.3.1
 konlpy==0.5.2
 lazy-object-proxy==1.5.2
 lxml==4.6.2
+matplotlib==3.3.4
 mccabe==0.6.1
+mecab-python===0.996-ko-0.9.2
 newspaper3k==0.2.8
 nltk==3.5
 numpy==1.20.1
 oauthlib==3.1.0
 Pillow==8.1.2
 pylint==2.7.2
+pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.8.1
 PyYAML==5.4.1
@@ -42,4 +47,5 @@ toml==0.10.2
 tqdm==4.59.0
 tweepy==3.10.0
 urllib3==1.26.3
+wordcloud==1.8.1
 wrapt==1.12.1
